--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-pyTelegramBotAPI==4.5.1
-requests==2.28.0
+beautifulsoup4==4.11.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+keyboard==0.13.5
+mysql-connector-python==8.0.29
+mysqlclient==2.1.0
+protobuf==4.21.1
+pyTelegramBotAPI==4.5.0
+requests==2.27.1
+soupsieve==2.3.2.post1
+telebot==0.0.4
 urllib3==1.26.9
